--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,5 @@
 {
+    "/js/agregarGastos/agregarGastos.js": "/js/agregarGastos/agregarGastos.js",
     "/js/app.js": "/js/app.js",
     "/css/app.css": "/css/app.css",
     "/js/contratas/contratas.js": "/js/contratas/contratas.js"
